--- a/src/templates/ProteinLocalization.html
+++ b/src/templates/ProteinLocalization.html
@@ -6,6 +6,8 @@
 <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
 <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.min.js"></script>
+<script src = "../js/menu.js"></script> <!-- jp - import menu.js on every page -->
+<script src = "../js/ProteinLocalization.js"></script> <!-- jp import page-specific js file -->
 <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css"/>
 <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -63,7 +65,7 @@ text-justify: inter-word;
 </div>
     <h4>Labels</h4>
     <div class="bs-multiselect">
-<select id = "mltislct1" name="comp_select" multiple = "multiple">
+<select id = "mltislct2" name="comp_select" multiple = "multiple">
     <option value="no_label" name="no_label">No Label</option>
 <option value="classical_label" name="classical">Classical</option>
 <option value="core_label" name="core">Pan-genome</option>
