--- a/src/templates/model_basic.html
+++ b/src/templates/model_basic.html
@@ -63,7 +63,7 @@
                  <tr><td><label for = "UTR3length">3 Prime UTR Length :</label></td>
                   <td>
                     <span>
-                      <input  class="form-control" type= "text" name="UTR3length" placeholder="Value range: 0.00 - 100.00" required="required" />
+                      <input  class="form-control" type= "text" name="UTR3length" placeholder="Value range: 0.00 - 8154.00" required="required" />
                     </span>
                 </td></tr>
         </div>
@@ -73,7 +73,7 @@
         <div class="col-sm-10">
           <tr><td><label for = "isoforms">Isoforms Count :</label></td>
             <td>
-          <span><input  class="form-control" type="text" name="isoforms" placeholder="Value range: 0.00 - 9.00" required="required" /></span>
+          <span><input  class="form-control" type="text" name="isoforms" placeholder="Value range: 1.00 - 26.00" required="required" /></span>
           </td></tr>
         </div>
       </div>
@@ -84,7 +84,7 @@
           <tr><td><label for = "UTR5length">5 prime UTR length:</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="UTR5length" placeholder="Value range: 0.00 - 1.00" required="required" />
+          <input  class="form-control" type="text" name="UTR5length" placeholder="Value range: 0.00 - 4011.00" required="required" />
         </span>
       </td></tr>
         </div>
@@ -95,7 +95,7 @@
         <tr><td><label for = "distance">Chromosomal distance:</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="distance" placeholder="Value range: 0.00 - 307.25" required="required" />
+          <input  class="form-control" type="text" name="distance" placeholder="Value range: -154163712.00 - 154114400.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -106,7 +106,7 @@
           <tr><td><label for = "CTDD_prop7_G3_residue0">CTDD prop7 G3 residue0 :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="CTDD_prop7_G3_residue0" placeholder="Value range: 0.00 - 1.00" required="required" value="{{CTDD_prop7_G3_residue0}}" />
+          <input  class="form-control" type="text" name="CTDD_prop7_G3_residue0" placeholder="Value range: 0.018 - 24.41" required="required" value="{{CTDD_prop7_G3_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -117,7 +117,7 @@
           <tr><td><label for = "PseDNC_Xc1_AT">PseDNC Xc1 AT :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="PseDNC_Xc1_AT" placeholder="Value range: 0.00 - 6.00" required="required" value="{{PseDNC_Xc1_AT}}" />
+          <input  class="form-control" type="text" name="PseDNC_Xc1_AT" placeholder="Value range: 0.00 - 0.117" required="required" value="{{PseDNC_Xc1_AT}}" />
           </span>
         </td></tr>
         </div>
@@ -128,7 +128,7 @@
           <tr><td><label for = "CTDD_prop1_G2_residue0">CTDD prop1 G2 residue0 :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="CTDD_prop1_G2_residue0" placeholder="Value range: 0.00 - 14.00" required="required" value="{{CTDD_prop1_G2_residue0}}" />
+          <input  class="form-control" type="text" name="CTDD_prop1_G2_residue0" placeholder="Value range: 0.0368 - 29.629" required="required" value="{{CTDD_prop1_G2_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -139,7 +139,7 @@
           <tr><td><label for = "PseKNC_3_Xc1_ACG">PseKNC 3 Xc1 ACG :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="PseKNC_3_Xc1_ACG" placeholder="Value range: 0.00 - 237017383" required="required"  value="{{PseKNC_3_Xc1_ACG}}"/>
+          <input  class="form-control" type="text" name="PseKNC_3_Xc1_ACG" placeholder="Value range: 0.00 - 0.02" required="required"  value="{{PseKNC_3_Xc1_ACG}}"/>
           </span>
         </td></tr>
         </div>
@@ -150,7 +150,7 @@
           <tr><td><label for = "avgExonLength">Average Exon Length :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="avgExonLength" placeholder="Value range: 0.00 - 157.73" required="required" />
+          <input  class="form-control" type="text" name="avgExonLength" placeholder="Value range: 0.00 - 6414.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -161,7 +161,7 @@
           <tr><td><label for = "TC_SAL">Tri Codon SAL :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="TC_SAL" placeholder="Value range: 0.00 - 295.00" size="5" required="required" value="{{TC_SAL}}"/>
+          <input  class="form-control" type="text" name="TC_SAL" placeholder="Value range: 0.00 - 0.022" size="5" required="required" value="{{TC_SAL}}"/>
           </span>
         </td></tr>
         </div>
@@ -171,7 +171,7 @@
         <div class="col-sm-10">
           <tr><td><label for = "PseDNC_Xc1_GG">PseDNC Xc1 GG :</label></td>
             <td>
-          <span><input  class="form-control" type="text" name="PseDNC_Xc1_GG" placeholder="Value range: 0.00 - 8154.00" required="required"  value="{{PseDNC_Xc1_GG}}"/></span>
+          <span><input  class="form-control" type="text" name="PseDNC_Xc1_GG" placeholder="Value range: 0.00 - 0.236" required="required"  value="{{PseDNC_Xc1_GG}}"/></span>
           </td></tr>
         </div>
       </div>
@@ -182,7 +182,7 @@
           <tr><td><label for = "PseKNC_3_Xc1_TAG">PseKNC 3 Xc1 TAG :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="PseKNC_3_Xc1_TAG" placeholder="Value range: 0.00 - 0.018" required="required" value="{{PseKNC_3_Xc1_TAG}}" />
+          <input  class="form-control" type="text" name="PseKNC_3_Xc1_TAG" placeholder="Value range: 0.00 - 0.009" required="required" value="{{PseKNC_3_Xc1_TAG}}" />
         </span>
       </td></tr>
         </div>
@@ -193,7 +193,7 @@
         <tr><td><label for = "CTDD_prop5_G2_residue0">CTDD prop5 G2 residue0 :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="CTDD_prop5_G2_residue0" placeholder="Value range: 0.00 - 0.0147" required="required" value="{{CTDD_prop5_G2_residue0}}"/>
+          <input  class="form-control" type="text" name="CTDD_prop5_G2_residue0" placeholder="Value range: 0.0184 - 3.636" required="required" value="{{CTDD_prop5_G2_residue0}}"/>
           </span>
         </td></tr>
         </div>
@@ -204,7 +204,7 @@
           <tr><td><label for = "TC_PAP">Tri Codon PAP:</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="TC_PAP" placeholder="Value range: 0.00 - 0.0208" required="required" value="{{TC_PAP}}" />
+          <input  class="form-control" type="text" name="TC_PAP" placeholder="Value range: 0.00 - 0.0735" required="required" value="{{TC_PAP}}" />
           </span>
         </td></tr>
         </div>
@@ -215,7 +215,7 @@
           <tr><td><label for = "mRNAlength">Canonical mRNA Length :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="mRNAlength" placeholder="Value range: 0.00 - 1.00" required="required" />
+          <input  class="form-control" type="text" name="mRNAlength" placeholder="Value range: 213.00 - 299070.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -226,7 +226,7 @@
           <tr><td><label for = "CTDD_prop2_G3_residue0">CTDD prop2 G3 residue0 :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="CTDD_prop2_G3_residue0" placeholder="Value range: 0.00 - 9592.00" required="required" value="{{CTDD_prop2_G3_residue0}}" />
+          <input  class="form-control" type="text" name="CTDD_prop2_G3_residue0" placeholder="Value range: 0.0184 - 30.00" required="required" value="{{CTDD_prop2_G3_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -237,7 +237,7 @@
           <tr><td><label for = "TC_LPL">Tri Codon LPL :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="TC_LPL" placeholder="Value range: 0.00 - 6.00" required="required" value="{{TC_LPL}}"/>
+          <input  class="form-control" type="text" name="TC_LPL" placeholder="Value range: 0.00 - 0.0328" required="required" value="{{TC_LPL}}"/>
           </span>
         </td></tr>
         </div>
@@ -259,7 +259,7 @@
           <tr><td><label for = "PAAC_Xc1_A">PAAC Xc1 A :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="PAAC_Xc1_A" placeholder="Value range: 0.00 - 16.00" size="5" required="required" value="{{PAAC_Xc1_A}}"/>
+          <input  class="form-control" type="text" name="PAAC_Xc1_A" placeholder="Value range: 0.00 - 0.0425" size="5" required="required" value="{{PAAC_Xc1_A}}"/>
           </span>
         </td></tr>
         </div>
@@ -269,7 +269,7 @@
           <tr><td><label for = "CTriad_VS111">CTriad VS111 :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="CTriad_VS111" placeholder="Value range: 0.00 - 171.00" required="required" value="{{CTriad_VS111}}"/>
+          <input  class="form-control" type="text" name="CTriad_VS111" placeholder="Value range: 0.00 - 1.00" required="required" value="{{CTriad_VS111}}"/>
           </span>
         </td></tr>
         </div>
@@ -280,7 +280,7 @@
           <tr><td><label for = "CTDD_prop7_G1_residue0">CTDD prop7 G1 residue0 :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="CTDD_prop7_G1_residue0" placeholder="Value range: 0.00 - 170670191" required="required" value="{{CTDD_prop7_G1_residue0}}" />
+          <input  class="form-control" type="text" name="CTDD_prop7_G1_residue0" placeholder="Value range: 0.0394 - 21.83" required="required" value="{{CTDD_prop7_G1_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -291,7 +291,7 @@
           <tr><td><label for = "PAAC_Xc1_P">PAAC Xc1 P :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="PAAC_Xc1_P" placeholder="Value range: 0.00 - 4.00" required="required" value="{{PAAC_Xc1_P}}" />
+          <input  class="form-control" type="text" name="PAAC_Xc1_P" placeholder="Value range: 0.00 - 163.68" required="required" value="{{PAAC_Xc1_P}}" />
           </span>
         </td></tr>
         </div>
@@ -302,7 +302,7 @@
           <tr><td><label for = "TC_VVA">Tri Codon VVA :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="TC_VVA" placeholder="Value range: 0.00 - 5.00" size="5" required="required" value="{{TC_VVA}}"/>
+          <input  class="form-control" type="text" name="TC_VVA" placeholder="Value range: 0.00 - 0.0307" size="5" required="required" value="{{TC_VVA}}"/>
           </span>
         </td></tr>
         </div>
@@ -313,7 +313,7 @@
           <tr><td><label for = "PseKNC_3_Xc1_TGT">PseKNC 3 Xc1 TGT :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="PseKNC_3_Xc1_TGT" placeholder="Value range: 0.00 - 6.00" size="5" required="required"  value="{{PseKNC_3_Xc1_TGT}}"/>
+          <input  class="form-control" type="text" name="PseKNC_3_Xc1_TGT" placeholder="Value range: 0.00 - 0.021" size="5" required="required"  value="{{PseKNC_3_Xc1_TGT}}"/>
           </span>
         </td></tr>
         </div>
@@ -324,7 +324,7 @@
           <tr><td><label for = "TC_ARG">Tri Codon ARG :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="TC_ARG" placeholder="Value range: 0.00 - 13.00" size="5" required="required" value="{{TC_ARG}}"/>
+          <input  class="form-control" type="text" name="TC_ARG" placeholder="Value range: 0.00 - 0.0296" size="5" required="required" value="{{TC_ARG}}"/>
           </span>
         </td></tr>
         </div>
