--- a/src/templates/tool_sources.html
+++ b/src/templates/tool_sources.html
@@ -51,10 +51,10 @@ tr:nth-child(even) {
   <tr>
     <td>Sequence</td>
     <td>Codon</td>
-    <td>Codon adaptation index (CAI) , Codon bias index (CBI) , Effective number of codons (Nc)  etc </td>
+    <td>Codon adaptation index (CAI) , Stacking Energy, Effective number of codons (Nc)  etc </td>
     <td>14</td>
     <td>Numerical</td>
-    <td><a href = "http://codonw.sourceforge.net/Indices.html" >CodonW</a></td>
+    <td><a href = "https://cran.r-project.org/web/packages/SADEG/SADEG.pdf" >SADEG</a></td>
   </tr>
     <tr>
     <td>        </td>
