--- a/src/templates/Proteinseq.html
+++ b/src/templates/Proteinseq.html
@@ -10,6 +10,8 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
 <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.min.js"></script>
+ <script src = "../js/menu.js"></script> <!-- jp - import menu.js on every page -->
+<script src = "../js/Proteinseq.js"></script> <!-- jp import page-specific js file -->
 <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css"/>
 <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 
@@ -112,13 +114,14 @@ text-justify: inter-word;
   width: 14em;
 border-radius: 12px;" class="button button4" onclick="submitForm('/Proteinseq)" id="bttn1">Submit for table</button>
 </div>
-    <div class="container">
+    <div class="container" id="analysis_container">
 <h4>Choose analysis</h4>
-<select name="comp_analysis" style=" width: 25.3em;"  id='selUser1' class="form-control" >
+<select name="comp_analysis" style=" width: 25.3em;"  id='selUser1' class="form-control">
     <optgroup label="Graphical analysis">
-    <option value="none" style="color:black">Select one analysis</option>
+    <option value="none" style="color:black">Analyses are for dipeptide or tripeptide compositions</option>
     <option value="count_dipeptide_box_plots">Frequency Dipeptide box plot</option>
     <option value="count_tripeptide_box_plots">Frequency Tripeptide box plot</option>
+        <!-- jp these options are generated dynamically in Proteinseq.js-->
 
     </optgroup>
 </select></div>
@@ -351,6 +354,7 @@ filterPlaceholder:'Search Here..'
 
   // Initialize select2
   $("#selUser1").select2();
+  comp_change(); //jp
 
 });
 </script>
