--- a/src/templates/data_sources.html
+++ b/src/templates/data_sources.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>VCF Files</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/shared/NAM/NAM_genome_and_annotation_Jan2021_release/SUPPLEMENTAL_DATA/NAM-founder-SNPs" >NAM-founder-SNPs</a></td>
+    <td><a href = "https://pubmed.ncbi.nlm.nih.gov/34353948/" >NAM-founder-SNPs</a></td>
   </tr>
 
   <tr>
@@ -47,52 +47,55 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Histone Modification datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_epigenetics_and_DNA_binding/Ricci_2019_atac_dapseq_chipseq_methylation/Ricci_2019_chipseq/Ricci_2019_chipseq_peakranger" >Ricci_2019_chipseq_peakranger</a><br>
-    <br><a href = "https://www.biorxiv.org/content/10.1101/730473v2" >Histone_Modification_data_from_paper</a></br></td>
+    <td><a href = "https://www.nature.com/articles/s41477-019-0547-0" >Histone modification CHIP-seq data</a><br>
+    <br><a href = "https://pubmed.ncbi.nlm.nih.gov/33016608/" >Histone Modification data from paper</a></br></td>
   </tr>
     <tr>
     <td>DNA Methylation datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_epigenetics_and_DNA_binding/Ricci_2019_atac_dapseq_chipseq_methylation/Ricci_2019_methylation" >Ricci_2019_methylation</a><br>
-     <br><a href = "https://www.biorxiv.org/content/10.1101/730473v2" >DNA_Methylation_data_from_paper</a></br></td>
+    <td><a href = "https://pubmed.ncbi.nlm.nih.gov/33016608/" >DNA Methylation data from paper</a></br></td>
   </tr>
     <tr>
     <td>ATAC seq datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_epigenetics_and_DNA_binding/Ricci_2019_atac_dapseq_chipseq_methylation/Ricci_2019_atac/Ricci_2019_atac_macs2_peaks" >Ricci_2019_atac_macs2_peaks</a><br>
-    <br><a href = "https://www.biorxiv.org/content/10.1101/730473v2" >ATAC_seq_data_from_paper</a></br></td>
+    <td><a href = "https://www.biorxiv.org/content/10.1101/730473v2" >ATAC-seq data from paper</a></br></td>
     </tr>
     <tr>
     <td>Transcription Factor Binding Sites datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_epigenetics_and_DNA_binding/Ricci_2019_atac_dapseq_chipseq_methylation/Ricci_2019_dapseq/Ricci_2019_dapseq_peaks" >Ricci_2019_dapseq_peaks</a><br>
-    <br><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_epigenetics_and_DNA_binding/Bolduc_2012_chipseq_knotted1/Bolduc_2012_knotted1_peaks" >Bolduc_2012_knotted1_peaks</a></br>
-    <br><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_epigenetics_and_DNA_binding/Dong_2019_chipseq_tb1/Dong_2019_tb1_peaks" >Dong_2019_tb1_peaks</a></br></td>
+    <td><a href = "https://www.nature.com/articles/s41477-019-0547-0" >Ricci 2019 TFBS DAP-seq</a><br>
+    <br><a href = "https://www.nature.com/articles/s41467-019-11774-w" >Bolduc 2012 knotted1 peaks</a></br>
+    <br><a href = "http://genesdev.cshlp.org/content/26/15/1685.short" >Dong 2019 tb1 peaks</a></br></td>
     </tr>
     <tr>
     <td>Enhancer datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_epigenetics_and_DNA_binding/Oka_2017_enhancer_binding" >Oka_2017_enhancer_binding</a></td>
+    <td><a href = "https://genomebiology.biomedcentral.com/articles/10.1186/s13059-017-1273-4" >Oka 2017 enhancer binding</a></td>
   </tr>
     <tr>
     <td>Transcription Start Sites datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_TSS/dTSS_AGPv5.tar.gz" >B73v5_TSS</a></td>
+    <td><a href = "https://academic.oup.com/plcell/article/27/12/3309/6096495" >B73v5 TSS</a></td>
   </tr>
     <tr>
     <td>miRNA datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_TSS/dTSS_AGPv5.tar.gz" >B73v5_TSS</a></td>
+    <td><a href = "https://ftp.ncbi.nlm.nih.gov/genomes/all/annotation_releases/4577/103/GCF_902167145.1_Zm-B73-REFERENCE-NAM-5.0/" >B73v5 miRNA</a></td>
   </tr>
      <tr>
     <td>correlation datasets</td>
-    <td><a href = "https://onlinelibrary.wiley.com/doi/full/10.1111/tpj.14184" >https://onlinelibrary.wiley.com/doi/full/10.1111/tpj.14184</a></td>
+    <td><a href = "https://pubmed.ncbi.nlm.nih.gov/30537259/" >https://pubmed.ncbi.nlm.nih.gov/30537259/</a></td>
   </tr>
     <tr>
     <td>Insertion datasets</td>
-    <td><a href = "https://download.maizegdb.org/Insertions/" >https://download.maizegdb.org/Insertions/</a></td>
+    <td><a href = "http://www.acdsinsertions.org/" >http://www.acdsinsertions.org//</a><br>
+    <br><a href = "https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0077172" >https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0077172</a></br></td>
+  </tr>
+  <tr>
+    <td>Transposable Element datasets</td>
+    <td><a href = "https://ftp.ncbi.nlm.nih.gov/genomes/all/annotation_releases/4577/103/GCF_902167145.1_Zm-B73-REFERENCE-NAM-5.0/" >Transposable Elements</a></td>
   </tr>
      <tr>
     <td>Pan-genome datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_TSS/dTSS_AGPv5.tar.gz" >B73v5_TSS</a></td>
+    <td><a href = "https://pubmed.ncbi.nlm.nih.gov/34353948/" >https://pubmed.ncbi.nlm.nih.gov/34353948/</a></td>
   </tr>
      <tr>
     <td>Gene Origin datasets</td>
-    <td><a href = "https://datacommons.cyverse.org/browse/iplant/home/maizegdb/maizegdb/B73v5_JBROWSE_AND_ANALYSES/B73v5_TSS/dTSS_AGPv5.tar.gz" >B73v5_TSS</a></td>
+    <td><a href = "https://pubmed.ncbi.nlm.nih.gov/34353948/" >https://pubmed.ncbi.nlm.nih.gov/34353948/</a></td>
   </tr>
      <tr>
     <td>Classical Genes data</td>
